Fixed alignment of public stories description

--- a/public/style.css
+++ b/public/style.css
@@ -177,6 +177,7 @@ label {
 
 .description {
     align-self: center;
+    text-align: center;
 }
 
 .container {
